# wiki-js-mcp-server

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  pypi-publish.yml
config/: example.env
docs/: MIGRATION-uvx.md
src/: server.py
